--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 			<id>deployment</id>
 			<name>Sample-Snap</name>
 			<url>http://localhost:8081/repository/Sample-Snap/</url>
-		</snapRepository>
+		</snapshotRepository>
 	</distributionManagement>
 
 
